--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,8 @@ bind -n M-k select-pane -D
 # Shift arrow to wtich windows
 bind -n M-i previous-window
 bind -n M-o next-window
+
+bind -n M-, resize-pane -Z
  
 # Mouse mode
 set -g mouse on
@@ -49,11 +51,14 @@ setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8
 setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
  
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
+set -g status-bg black
+set -g status-fg white
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour245,bold] %A %-I:%M #[fg=colour255,bg=colour000] '
+set -g status-right '#[fg=white,bg=black,bold] %A %-I:%M #[fg=colour255,bg=colour000]'
 set -g status-right-length 50
 set -g status-left-length 20
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+set -g pane-border-style fg=black
+set -g pane-active-border-style "bg=black fg=black"
