tmux: move windows key bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,10 @@ bind -n M-k select-pane -D
 bind -n M-i previous-window
 bind -n M-o next-window
 
+# Move windows
+bind-key -n M-Left swap-window -t -1
+bind-key -n M-Right swap-window -t +1
+
 bind -n M-, resize-pane -Z
  
 # Mouse mode
