--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,9 @@ set-window-option -g automatic-rename on
 set-option -g set-titles on
  
 set-option -g status "on"
+
+# Vim mode copy mode
+setw -g mode-keys vi
  
 # Clipboard copy
 bind -T copy-mode-vi y send -X copy-pipe "xclip -selection c"
