tmux: yank on wayland

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,7 +42,9 @@ set-option -g status "on"
 setw -g mode-keys vi
  
 # Clipboard copy
-bind -T copy-mode-vi y send -X copy-pipe "xclip -selection c"
+# bind -T copy-mode-vi y send -X copy-pipe "xclip -selection c" # x11
+bind -T copy-mode-vi y send -X copy-pipe "wl-copy" # wayland
+
 
 # Fix slow escape time in vim
 set -s escape-time 0
