vim + vscode: change the leader key to space

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.fontFamily": "'Cascadia Code', 'Droid Sans Mono', 'monospace', monospace",
   "vim.vimrc.enable": true,
   "vim.vimrc.path": "~/.vimrc",
-  "vim.leader": ";",
+  "vim.leader": " ",
   "editor.formatOnSave": true,
   "workbench.colorTheme": "GitHub Light",
   "workbench.preferredLightColorTheme": "GitHub Light",
